<!--
  ~ Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
  ~
  ~ WSO2 Inc. licenses this file to you under the Apache License,
  ~ Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <groupId>org.wso2.cellery</groupId>
        <version>0.982.0</version>
        <artifactId>cellery-extension-parent</artifactId>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <artifactId>cellery-extension</artifactId>
    <packaging>jar</packaging>
    <name>Ballerina cellery Extension</name>
    <url>http://ballerinalang.org</url>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.ballerinalang</groupId>
            <artifactId>lib-creator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ballerinalang</groupId>
            <artifactId>ballerina-lang</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ballerinalang</groupId>
            <artifactId>ballerina-builtin</artifactId>
            <type>zip</type>
            <classifier>ballerina-binary-repo</classifier>
        </dependency>
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>docker-client</artifactId>
        </dependency>
        <dependency>
            <groupId>com.amihaiemil.web</groupId>
            <artifactId>eo-yaml</artifactId>
        </dependency>
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>kubernetes-client</artifactId>
        </dependency>
    </dependencies>


    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>ballerina/**</exclude>
                </excludes>
            </resource>

            <!-- copy ballerina annotation sources to the jar -->
            <resource>
                <directory>${ballerina.source.directory}</directory>
                <targetPath>META-INF/</targetPath>
            </resource>
        </resources>

        <plugins>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>gen-balo</id>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <phase>compile</phase>
                        <configuration>
                            <systemProperties>
                                <systemProperty>
                                    <key>BALLERINA_DEV_MODE_COMPILE</key>
                                    <value>true</value>
                                </systemProperty>
                            </systemProperties>
                            <arguments>
                                <!--is built in pkg loaded from source-->
                                <argument>false</argument>
                                <!--source project dir-->
                                <argument>${basedir}/src/main/ballerina/wso2</argument>
                                <!--balo destination-->
                                <argument>${project.build.directory}/generated-balo/repo/wso2</argument>
                                <!--ballerina home-->
                                <argument>${project.build.directory}</argument>
                                <!--not used-->
                                <argument>${project.version}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>org.ballerinalang.stdlib.utils.GenerateBalo</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack-dependencies</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeClassifiers>ballerina-binary-repo</includeClassifiers>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.5.2</version>
                <executions>
                    <execution>
                        <id>distribution</id>
                        <phase>package</phase>
                        <goals>
                            <goal>attached</goal>
                        </goals>
                        <configuration>
                            <descriptorSourceDirectory>assembly</descriptorSourceDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.19.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>**/*.java</include>
                            </includes>
                            <forkCount>3</forkCount>
                            <reuseForks>true</reuseForks>
                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                        </configuration>
                    </execution>
                    <execution>
                        <id>verify</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!-- For ballerina annotation processing -->
            <plugin>
                <groupId>org.bsc.maven</groupId>
                <artifactId>maven-processor-plugin</artifactId>
                <version>${mvn.processor.plugin.version}</version>
                <configuration>
                    <processors>
                        <processor>org.ballerinalang.codegen.BallerinaAnnotationProcessor</processor>
                    </processors>
                    <options>
                        <nativeEntityProviderPackage>org.ballerinalang.net.generated.providers
                        </nativeEntityProviderPackage>
                        <nativeEntityProviderClass>StandardNativeElementProvider</nativeEntityProviderClass>
                    </options>
                </configuration>
                <executions>
                    <execution>
                        <id>process</id>
                        <goals>
                            <goal>process</goal>
                        </goals>
                        <phase>generate-sources</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>true</createDependencyReducedPom>
                            <minimizeJar>true</minimizeJar>
                            <artifactSet>
                                <includes>
                                    <include>io.fabric8:docker*</include>
                                    <include>commons-io:commons-io</include>
                                    <include>commons-codec:commons-codec</include>
                                    <include>javax.validation:validation-api</include>
                                    <include>com.squareup.okhttp3:okhttp</include>
                                    <include>com.squareup.okhttp3:logging-interceptor</include>
                                    <include>com.squareup.okio:okio</include>
                                    <include>org.apache.commons:commons-compress</include>
                                    <include>com.github.jnr:jnr-unixsocket</include>
                                    <include>com.github.jnr:jnr-ffi</include>
                                    <include>com.github.jnr:jffi</include>
                                    <include>com.github.jnr:jnr-constants</include>
                                    <include>com.github.jnr:jnr-enxio</include>
                                    <include>com.github.jnr:jnr-posix</include>
                                    <include>org.ow2.asm:asm</include>
                                    <include>com.fasterxml.jackson.core:jackson-databind</include>
                                    <include>com.fasterxml.jackson.core:jackson-core</include>
                                    <include>com.fasterxml.jackson.core:jackson-annotations</include>
                                    <include>com.amihaiemil.web:*</include>
                                </includes>
                                <excludes>
                                    <exclude>org.slf4j:slf4j-api</exclude>
                                    <exclude>org.slf4j:slf4j-jdk14</exclude>
                                    <exclude>com.fasterxml.jackson.dataformat:jackson-dataformat-yaml</exclude>
                                    <exclude>com.fasterxml.jackson.core:jackson-databind</exclude>
                                    <exclude>com.fasterxml.jackson.core:jackson-annotations</exclude>
                                    <exclude>com.fasterxml.jackson.core:jackson-core</exclude>
                                    <exclude>commons-lang:commons-lang</exclude>
                                    <exclude>org.yaml:snakeyaml</exclude>
                                    <exclude>org.ballerinalang:ballerina-lang</exclude>
                                    <exclude>org.ballerinalang:ballerina-launcher</exclude>
                                    <exclude>org.ballerinalang:ballerina-builtin</exclude>
                                    <exclude>org.ballerinalang:ballerina-core</exclude>
                                    <exclude>org.ballerinalang:ballerina-mime</exclude>
                                    <exclude>org.ballerinalang:ballerina-logging</exclude>
                                    <exclude>org.ballerinalang:ballerina-http</exclude>
                                    <exclude>junit:junit</exclude>
                                    <exclude>org.bsc.maven:maven-processor-plugin</exclude>
                                </excludes>
                            </artifactSet>
                            <filters>
                                <filter>
                                    <artifact>com.github.jnr:jffi</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>com.github.jnr:jnr-unixsocket</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>com.github.jnr:jnr-ffi</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>com.github.jnr:jnr-constants</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>com.github.jnr:jnr-enxio</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>com.github.jnr:jnr-posix</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>io.fabric8:docker*</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
